@@ -1,6 +1,9 @@
 # ChangeLog for app-portage/eix
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  14 Jan 2013; Martin Väth <martin@mvath.de>
+  Simplify handling of REPLACING_VERSIONS
 
   28 Sep 2012; Martin Väth <martin@mvath.de>
   Bump to EAPI=5
